Revert "fix actionbar overflow issue" becuase it didn't actually fix it
This reverts commit fa09ca0f6c41a398feccb9cdb887720137a8fa86.

--- a/src/less/actionToolbar.less
+++ b/src/less/actionToolbar.less
@@ -1,13 +1,13 @@
 //
 // Action Toolbar
 // --------------------------------------------------
+
 .action-area {
   background-color: #e5e5e5;
   height: 40px;
   line-height: 20px;
   padding: 0 10px;
   overflow: hidden;
-  position: relative;
   .clearfix();
 
   &.action-toolbar-confirm-shown {
@@ -38,8 +38,8 @@
       .transition(e('padding .1s ease-in'));
       .transition(e('background-color .1s ease-in'));
       text-decoration: none;
-      border: none;
-      outline: none;
+      border:none;
+      outline:none;
 
       &:hover {
         background-color: #3a3a3a;
@@ -78,8 +78,7 @@
 }
 
 .action-toolbar-right {
-  position: absolute;
-  right: 10px;
+  float: right;
 }
 
 .overflow-menu {
@@ -103,12 +102,12 @@
       font-size: 13px;
     }
 
-    .dropdown-menu {
-      li > a,
-      li > button {
-        padding: 5px 10px;
-      }
-    }
+   .dropdown-menu {
+     li > a,
+     li > button {
+       padding: 5px 10px;
+     }
+   }
 
     svg {
       fill: @white;
